test/test-files/analyzer/loop-control-insts/error-break-count-invalid/exception.out
Semantic error in : ./test-files/analyzer/loop-control-insts/error-break-count-invalid/source.spice:3:9:
Invalid number of break calls: Break count must be >= 1, you provided 0

break 0;
^^^^^^^